# LDAP-Extended-Control-Tools

./: README.md  blue-team-linkedin.html
blue/: AdLdapDefense.psd1  AdLdapDefense.psm1  Import-AdLdapDefense.ps1  README.md
blue/functions/: Deploy-SaclCanary.ps1  Get-ReplicationAbuse.ps1  Invoke-LdapLoggingAudit.ps1  Invoke-ReplMetadataHunt.ps1  _shared.ps1
blue/tests/: Shared.Tests.ps1
red/: README.md  ldapctl.ps1  pyproject.toml  requirements.txt
red/ldapctl/: __main__.py  ber.py  cli.py  collector.py  forceupdate.py  ldapconn.py  recon.py
red/tests/: test_ber.py  test_guard.py
